--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,14 @@
 <div class="container">
-  
+  <div class="row">
+    <div class="card">
+      <div class="card bg-info">
+      <h1 class="text-center">Asignacion de Memoria</h1>
+    </div>
+    <div class="card-body">
+      <h2>Arrastra los procesos a sus particiones</h2>
+    </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-4">
       <div class="icons">
