Restructuracion de la carpeta publica

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
 
     <div class="card-body card-text">
       <p>Instrucciones: Sube un archivo JSON con el siguiente formato: </p>
-      <img class="format-json " src="/public/code.png" alt="Formato de COdigo">
+      <img class="format-json " src="/public/img/code.png" alt="Formato de Codigo">
     </div>
   </div>
 
